--- a/style.css
+++ b/style.css
@@ -5,19 +5,44 @@ html{
 body{
 	
 	margin-top: 30px;
+	font-family: Courier New;
 
+}
+
+.slider{
+	max-width: 100%;
+	height: 100%;
 }
 
 .jumbotron img{
-	width: 400px;
+	width: 40%;
 }
 
+.footer {
+	font-size: 22px;
+}
 
+.jumbotron{
+	background-color: turquoise;
+}
+.about {
+	background-color: deepskyblue;
+	font-size: 20px;
+	margin-top: -30px;
+}
+.contact{
+	height: 80%;
+	margin-top: -20px;
+	background-color: dodgerblue;
 
+}
+.contact form label{
+	font-size: 25px;
+	color: white;
+	padding-bottom: 20px;
+}
 
-
-
-
-
-
-
+footer{
+	height: 10px;
+	margin-top: -10px;
+}
