--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ body{
 	max-width: 100%;
 	height: 100%;
 }
+.slider h3{
+text-shadow: 2px 2px 4px rgb(0,0,0,1);
+color: red;
+font-family: Lucida Console;
+}
 
 .jumbotron img{
 	width: 40%;
